# c_result

./: CMakeLists.txt  LICENSE  README.md  c_resultConfig.cmake.in
.github/workflows/: cmake-single-platform.yml
include/: c_result.h
test/: c_result.c
